--- a/app/assets/stylesheets/controllers/registrations/_form.scss
+++ b/app/assets/stylesheets/controllers/registrations/_form.scss
@@ -18,4 +18,16 @@
     position: relative;
   }
 
+  .radio {
+    margin-top: 0;
+  }
+
+  .radio-inline {
+    padding-left: 8px;
+  }
+
+  .help-block {
+    clear: both;
+  }
+
 }
