--- a/app/views/admin/volunteers/edit.html.slim
+++ b/app/views/admin/volunteers/edit.html.slim
@@ -1,7 +1,7 @@
 .container
   h2 Edit volunteer details
 
-  = form_for [:admin, @volunteer] do |f| 
+  = simple_form_for [:admin, @volunteer] do |f|
 
     = render partial: 'devise/registrations/form', locals: { f: f }
 
