--- a/app/views/admin/volunteers/new.html.slim
+++ b/app/views/admin/volunteers/new.html.slim
@@ -1,9 +1,10 @@
-h2 Register new volunteer
+.container
+  h2 Register new volunteer
 
-= form_for [:admin, @volunteer] do |f|
+  = simple_form_for [:admin, @volunteer] do |f|
 
-  = render partial: 'devise/registrations/form', locals: { f: f }
+    = render partial: 'devise/registrations/form', locals: { f: f }
 
-  .panel.panel-default
-    .panel-footer.text-right
-      input.btn.btn-primary type="submit" value="Create Account"
+    .panel.panel-default
+      .panel-footer.text-right
+        input.btn.btn-primary type="submit" value="Create Account"
