prettify admin event ui

--- a/app/views/layouts/admin.html.slim
+++ b/app/views/layouts/admin.html.slim
@@ -31,8 +31,8 @@ html
         section.content-header
 
           h1
-            = yield 'page_header'
-            small = yield 'page_subheader'
+            = yield :page_header
+            small = yield :page_subheader
 
           ol.breadcrumb
 
