--- a/app/assets/stylesheets/admin.scss
+++ b/app/assets/stylesheets/admin.scss
@@ -3,8 +3,7 @@
 
 @import 'font-awesome';
 
-@import 'AdminLTE/AdminLTE';
+@import 'AdminLTE.min';
 @import 'AdminLTE/skins/skin-purple';
 
 @import 'bootstrap-datetimepicker';
-@import 'controllers/**/*';
