--- a/app/views/admin/events/show.html.slim
+++ b/app/views/admin/events/show.html.slim
@@ -1,38 +1,68 @@
-.container
-  .row
-    .col-xs-12
-      h2 Details of #{@event.event_name}
-      - decorate(@event) do |decorated_event|
-        dl.event-details
-          dt Center Name
-          dd = decorated_event.center.name
-          dt Event Name
-          dd = decorated_event.event_name
-          dt Description
-          dd = decorated_event.description
-          dt When
-          dd = decorated_event.when
-          dt Time
-          dd = decorated_event.time
-          dt Approx. Duration
-          dd = decorated_event.duration
-          dt Location
-          dd = decorated_event.location
-          dt Number of Volunteers
-          dd = decorated_event.number_of_volunteers
+- decorate(@event) do |decorated_event|
+
+  - content_for :page_header do
+    = decorated_event.event_name
+
+  - content_for :page_subheader do
+    | details
 
   .row
-    .col-xs-12
-      ul#volunteer-tabs.nav.nav-tabs
-        li#volunteer-tab-find.active
-          = link_to 'Find Volunteers', find_admin_event_volunteer_events_path(@event), remote: true
-        li#volunteer-tab-pending
-          = link_to 'Pending Volunteers', pending_admin_event_volunteer_events_path(@event), remote: true
-        li#volunteer-tab-approved
-          = link_to 'Approved Volunteers', approved_admin_event_volunteer_events_path(@event), remote: true
+    .col-md-3
 
-      #tab-content
+      .box.box-primary
+        .box-body.box-profile
+          h3.profile-username.text-center
+            = decorated_event.event_name
 
+          ul.list-group.list-group-unbordered
+            li.list-group-item
+              = fa_icon 'institution', class: 'margin-r-5'
+              b Center Name
+              a.pull-right = decorated_event.center.name
+
+            li.list-group-item
+              = fa_icon 'map-marker', class: 'margin-r-5'
+              b Location
+              a.pull-right = decorated_event.location
+
+            li.list-group-item
+              = fa_icon 'calendar', class: 'margin-r-5'
+              b When
+              a.pull-right = decorated_event.when
+
+            li.list-group-item
+              = fa_icon 'clock-o', class: 'margin-r-5'
+              b Time
+              a.pull-right = decorated_event.time
+
+            li.list-group-item
+              = fa_icon 'hourglass-2', class: 'margin-r-5'
+              b Approx. Duration
+              a.pull-right = decorated_event.duration
+
+            li.list-group-item
+              = fa_icon 'group', class: 'margin-r-5'
+              b Number of Volunteers
+              a.pull-right = decorated_event.number_of_volunteers
+          strong
+            = fa_icon 'file-text-o', class: 'margin-r-5'
+            | Description
+          p
+            = decorated_event.description
+
+    .col-md-9
+      .nav-tabs-custom
+        ul#volunteer-tabs.nav.nav-tabs
+          li#volunteer-tab-index.active
+            = link_to 'Search And Invite', admin_event_volunteer_events_path(@event), remote: true
+          li#volunteer-tab-pending
+            = link_to 'Pending Approval', pending_admin_event_volunteer_events_path(@event), remote: true
+          li#volunteer-tab-invited
+            = link_to 'Invited', invited_admin_event_volunteer_events_path(@event), remote: true
+          li#volunteer-tab-approved
+            = link_to 'Attending', approved_admin_event_volunteer_events_path(@event), remote: true
+
+        #tab-content
 
   .row
     .col-xs-12
