--- a/app/views/layouts/admin.html.slim
+++ b/app/views/layouts/admin.html.slim
@@ -40,7 +40,7 @@ html
               = fa_icon :dashboard
               | HOME
 
-              = yield 'breadcrumbs'
+              = yield :breadcrumbs
 
         section.content
 
