--- a/app/views/admin/events/show.html.slim
+++ b/app/views/admin/events/show.html.slim
@@ -4,7 +4,7 @@
     = event.event_name
 
   - content_for :page_subheader do
-    | details
+    = event.state
 
   - content_for :breadcrumbs do
     li = link_to 'Events', admin_events_path
@@ -22,55 +22,57 @@
             li.list-group-item
               = fa_icon 'institution', class: 'margin-r-5'
               b Center Name
-              a.pull-right = event.center.name
+              = link_to event.center.name, admin_center_path(event.center), class: 'pull-right'
 
             li.list-group-item
               = fa_icon 'map-marker', class: 'margin-r-5'
               b Location
-              a.pull-right = event.location
+              span.pull-right = event.location
 
             li.list-group-item
               = fa_icon 'calendar', class: 'margin-r-5'
               b When
-              a.pull-right = event.when
+              span.pull-right = event.when
 
             li.list-group-item
               = fa_icon 'clock-o', class: 'margin-r-5'
               b Time
-              a.pull-right = event.time
+              span.pull-right = event.time
 
             li.list-group-item
               = fa_icon 'hourglass-2', class: 'margin-r-5'
               b Approx. Duration
-              a.pull-right = event.duration
+              span.pull-right = event.duration
 
             li.list-group-item
               = fa_icon 'group', class: 'margin-r-5'
               b Number of Volunteers
-              a.pull-right = event.number_of_volunteers
+              span.pull-right = event.number_of_volunteers
           strong
             = fa_icon 'file-text-o', class: 'margin-r-5'
             | Description
           p
             = event.description
 
+          = link_to 'Edit', edit_admin_event_path(event), class: 'btn btn-primary btn-block'
+
     .col-md-9
-      .nav-tabs-custom
-        ul#volunteer-tabs.nav.nav-tabs
-          li#volunteer-tab-index.active
-            = link_to 'Search And Invite', admin_event_volunteer_events_path(event), remote: true
-          li#volunteer-tab-invited
-            = link_to 'Invited', invited_admin_event_volunteer_events_path(event), remote: true
-          li#volunteer-tab-pending
-            = link_to 'Pending Approval', pending_admin_event_volunteer_events_path(event), remote: true
-          li#volunteer-tab-approved
-            = link_to 'Attending', approved_admin_event_volunteer_events_path(event), remote: true
-          li#volunteer-tab-declined
-            = link_to 'Declined / Cancelled', declined_admin_event_volunteer_events_path(event), remote: true
+      - if event.cancelled?
+        .box.box-danger
+          .box-body
+            | Event is cancelled
+      - else
+        .nav-tabs-custom
+          ul#volunteer-tabs.nav.nav-tabs
+            li#volunteer-tab-index.active
+              = link_to 'Search And Invite', admin_event_volunteer_events_path(event), remote: true
+            li#volunteer-tab-invited
+              = link_to 'Invited', invited_admin_event_volunteer_events_path(event), remote: true
+            li#volunteer-tab-pending
+              = link_to 'Pending Approval', pending_admin_event_volunteer_events_path(event), remote: true
+            li#volunteer-tab-approved
+              = link_to 'Attending', approved_admin_event_volunteer_events_path(event), remote: true
+            li#volunteer-tab-declined
+              = link_to 'Declined / Cancelled', declined_admin_event_volunteer_events_path(event), remote: true
 
-        #tab-content
-
-  .row
-    .col-xs-12
-      = link_to 'Edit', edit_admin_event_path(event), class: 'btn btn-primary'
-      = link_to 'View all events', admin_events_path, class: 'btn btn-default'
+          #tab-content
