--- a/app/views/admin/events/_job_requirement_fields.html.slim
+++ b/app/views/admin/events/_job_requirement_fields.html.slim
@@ -1,16 +1,12 @@
 .nested-fields
-  .row
-    .col-xs-12.col-sm-6
-      .form-group
-        = f.label :job_title
-        = f.text_field :job_title, class: 'form-control'
-    .col-xs-12.col-sm-6
-      .form-group
-        = f.label :number_of_volunteers
-        = f.number_field :number_of_volunteers, class: 'form-control'
-    .col-xs-12
-      .form-group
-        = f.label :description
-        = f.text_field :description, class: 'form-control'
-    .col-xs-12
-      = link_to_remove_association "remove job requirement", f, class: 'btn btn-default'
+  .box.box-default
+    .box-header
+      .box-tools.pull-right
+        = link_to_remove_association f, class: 'btn btn-box-tool', data: { widget: 'remove' } do
+          = fa_icon('remove')
+
+    .box-body
+      .row
+        = f.input :job_title, wrapper_html: { class: 'col-xs-7' }
+        = f.input :number_of_volunteers, wrapper_html: { class: 'col-xs-5' }
+        = f.input :description, wrapper_html: { class: 'col-xs-12' }
