--- a/app/views/admin/events/edit.html.slim
+++ b/app/views/admin/events/edit.html.slim
@@ -1,3 +1,14 @@
-h2 Editing Event - #{@event.event_name}
+- decorate(@event) do |event|
+  - content_for :page_header do
+    = event.event_name
 
-= render 'form', event: @event
+  - content_for :page_subheader do
+    = event.state
+
+  - content_for :breadcrumbs do
+    li = link_to 'Events', admin_events_path
+    li = link_to event.event_name, admin_event_path(event)
+    li = link_to 'Edit', edit_admin_event_path(event)
+
+  = simple_form_for @event, url: admin_event_path(@event), method: :patch do |f|
+    = render 'form', f: f
