--- a/app/views/admin/events/new.html.slim
+++ b/app/views/admin/events/new.html.slim
@@ -1,3 +1,10 @@
-h2 New Event
-br
-= render 'form', event: @event
+- content_for :page_header do
+  | New Event
+
+- content_for :breadcrumbs do
+  li = link_to 'Events', admin_events_path
+  li = link_to 'New', new_admin_event_path
+
+
+= simple_form_for @event, url: admin_events_path do |f|
+  = render 'form', f: f
