add job requirements to event detail page

--- a/app/views/admin/events/_form.html.slim
+++ b/app/views/admin/events/_form.html.slim
@@ -29,4 +29,4 @@
                 = link_to_add_association 'add job requirement', f, :job_requirements, class: 'btn btn-default btn-block'
 
       .box-footer
-        = f.submit 'Save', class: 'btn btn-primary pull-right'
+        = f.submit 'Save', class: 'btn btn-primary pull-right btn-block'
