--- a/app/views/admin/centers/index.html.slim
+++ b/app/views/admin/centers/index.html.slim
@@ -1,15 +1,29 @@
-.container
-  h1 Centers
-  - if current_admin.has_role?(:admin)
-    = link_to 'Add new', new_admin_center_path, class: 'btn btn-primary'
+- content_for :page_header do
+  | Centers
 
-  table.table.table-hover.table-striped
-    thead
-      tr
-        th Center Name
-    tbody
-      - @centers.each do |center|
-        tr
-          td = link_to center.name, admin_center_path(center)
-          - if current_admin.has_role?(:admin)
-            td = link_to 'Edit', edit_admin_center_path(center), class: 'btn btn-default'
+- content_for :breadcrumbs do
+  li = link_to 'Centers', admin_centers_path
+
+.row
+  .col-xs-12
+
+    .box
+      .box-header
+        .box-title
+
+        .box-tools
+          .no-margin.pull-right
+            - if current_admin.has_role?(:admin)
+              = link_to 'Add new', new_admin_center_path, class: 'btn btn-primary'
+
+      .box-body.no-padding
+        table.table.table-hover.table-striped
+          thead
+            tr
+              th Center Name
+          tbody
+            - @centers.each do |center|
+              tr
+                td = link_to center.name, admin_center_path(center)
+                - if current_admin.has_role?(:admin)
+                  td = link_to 'Edit', edit_admin_center_path(center), class: 'btn btn-default'
