update UI of centers new page

--- a/app/views/admin/centers/_form.html.slim
+++ b/app/views/admin/centers/_form.html.slim
@@ -1,41 +1,15 @@
-= form_for [:admin, center] do |f|
-  - if center.errors.any?
-    #error_explanation
-      h2
-        = pluralize(center.errors.count, "error")
-        | prohibited this center from being saved:
+.row
+  .col-xs-12
+    .box.box-primary
+      .box-header.with-border
+        h3.box-title Center Details
+      .box-body
+        = f.input :name, label: 'Center Name', placeholder: 'name of the center'
+        = f.input :manager_name, label: 'Manager Name', placeholder: 'full name as per NRIC'
+        = f.input :contact_number, label: 'Contact Number', placeholder: '+65 ???? ????'
+        = f.input :fax_number, label: 'Fax Number', placeholder: '+65 ???? ????'
+        = f.input :email, label: 'Email', placeholder: 'valid email address'
+        = f.input :address, label: 'Address', placeholder: 'including postal code'
 
-      ul
-        - center.errors.full_messages.each do |message|
-          li= message
-  .row
-    .col-xs-12.col-sm-6
-      .form-group
-        = f.label :'Center Name'
-        = f.text_field :name, class: "form-control", placeholder: "name of the center"
-    .col-xs-12.col-sm-6
-      .form-group
-        = f.label :'Manager Name'
-        = f.text_field :manager_name, class: "form-control", placeholder: "full name as per NRIC"
-  .row
-    .col-xs-12.col-sm-6
-      .form-group
-        = f.label :'Contact Number'
-        = f.telephone_field :contact_number, class: "form-control", placeholder: "+65 ???? ????"
-    .col-xs-12.col-sm-6
-      .form-group
-        = f.label :'Fax Number'
-        = f.telephone_field :fax_number, class: "form-control", placeholder: "+65 ???? ????"
-  .row   
-    .col-xs-12.col-sm-6
-      .form-group
-        = f.label :'Email'
-        = f.text_field :email, class: "form-control", placeholder: "valid email address"      
-    .col-xs-12.col-sm-6
-      .form-group
-        = f.label :'Address'
-        = f.text_area :address, class: "form-control", placeholder: "including postal code"
-  .actions
-    .button
-      input.btn.btn-default type="submit" value=("Save")
-
+      .box-footer
+        = f.submit 'Save', class: 'btn btn-primary pull-right btn-block'
